# robobo-gazebo-simulator-ros2

./: CMakeLists.txt  README.md  package.xml
include/robobo/: infrared_range.h  robobo_camera.h  robobo_camera_utils.h  robobo_imu_sensor.h
launch/: robobo.launch.py
models/box/: box.sdf  model.config
models/green_ball/: green_ball.config  green_ball.sdf
models/robobo/: model.config  model.sdf
models/robobo/meshes/: left_wheel_visual.dae  right_wheel_visual.dae
models/test_track/: model.config  test_track.sdf
models/white_ground/: model.config  model.sdf
plugins/: encoders.cpp  infrared_range.cpp  move_pan_tilt.cpp  move_wheels.cpp  robobo_camera.cpp  robobo_camera_utils.cpp  robobo_imu_sensor.cpp
scripts/: robobo_validation.py  spawn_robobo.py
worlds/: test.world
