<?xml version="1.0"?>
<package format="3">
  <name>robobo_gazebo</name>
  <version>0.1.0</version>
  <description>Simulation of Robobo in Gazebo package</description>

  <maintainer email="todo@todo.com">  </maintainer>
  <license>BSD, Apache 2.0</license>

   <buildtool_depend>rosidl_default_generators</buildtool_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>

  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>robobo_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robobo_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
	<build_type>ament_cmake</build_type>
	

  <gazebo_ros plugin_path="${prefix}/lib"/>
  <gazebo_ros gazebo_model_path="${prefix}/models"/>
  <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>

</package>
